fix overflow bugs

--- a/client/templates/layouts/masterLayout/masterLayout.import.less
+++ b/client/templates/layouts/masterLayout/masterLayout.import.less
@@ -10,6 +10,7 @@
 		position: relative;
 		div[data-momentum] {
 			flex-grow: 1;
+			overflow: auto;
 			> div:not(:last-child) {
 				position: absolute;
 				width: 100%;
